# hexchat

./: .gitignore
plugins/lua/: Makefile.am
plugins/lua/tests/: run-lua-test  test-hooks.lua
src/common/: server.c
src/common/dbus/: dbus-client.c
